--- a/less/home-page.less
+++ b/less/home-page.less
@@ -58,8 +58,8 @@
       }
 
       .btn {
-      }
-    }
+        .custombutton(flex, center);
+    }//closes btn
 
     .walk-img {
       width: 46%;
