--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,23 @@
 // Navigation code here
+.navigation{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    h1{
+        font-size: 3rem;
+        margin: 8% 0 4% ;
+    }
+    a{ 
+        text-decoration: none;
+        color: black;
+        font-size: 2rem;
+        margin: 1% ;
+    }
+    .links{
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
+  }//closes navigation  
