--- a/less/mixins.less
+++ b/less/mixins.less
@@ -4,13 +4,23 @@
     justify-content: @justify;
     align-items: center;
     background-color: @btn-bg-color;
+    border: 1px solid black;
     color: white;
     width: 30%;
     height: 45px;
     font-size: 1.5rem;
     border-radius: 10px;
-    &:hover{
-        background-color: darkblue;
+    &:hover {
+        background-color: white;
+        color: @btn-bg-color;
       }
 }
-
+.fontstyle{
+    font-size: 2rem;
+    color: @btn-bg-color;
+}
+.border{
+    border: 2px dashed black;
+    border-radius: 20px;
+    padding: 5px;
+}
