--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,23 +1,26 @@
 // Navigation code here
 .navigation{
     width: 100%;
+    position: fixed;
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: darkgray ;
+    opacity: 70%;
     h1{
         font-size: 3rem;
         margin: 8% 0 4% ;
-    }
+    }//closes h1
     a{ 
+        .fontstyle();
+        .border();
         text-decoration: none;
-        color: black;
-        font-size: 2rem;
         margin: 1% ;
-    }
+    }//closes a
     .links{
         width: 100%;
         display: flex;
         flex-direction: row;
         justify-content: center;
-    }
+    }//closes links
   }//closes navigation  
