--- a/less/mixins.less
+++ b/less/mixins.less
@@ -15,11 +15,13 @@
         color: @btn-bg-color;
       }
 }
-.fontstyle{
+.font(){
     font-size: 2rem;
+    font-style: normal;
     color: @btn-bg-color;
+    text-decoration: none;
 }
-.border{
+.border(){
     border: 2px dashed black;
     border-radius: 20px;
     padding: 5px;
