--- a/less/navigation.less
+++ b/less/navigation.less
@@ -12,9 +12,8 @@
         margin: 8% 0 4% ;
     }//closes h1
     a{ 
-        .fontstyle();
-        .border();
-        text-decoration: none;
+        .font();
+        .border();     
         margin: 1% ;
     }//closes a
     .links{
