--- a/lessforcontact/contactnavigation.less
+++ b/lessforcontact/contactnavigation.less
@@ -11,7 +11,7 @@
         margin: 8% 0 4% ;
     }//closes h1
     a{ 
-        .fontstyle();
+        .font();
         .border();
         text-decoration: none;
         margin: 1% ;
