--- a/lessforcontact/contacthome.less
+++ b/lessforcontact/contacthome.less
@@ -1,111 +1,22 @@
-// Home Content
-
-.home {
-
-
-    .intro {
-      .imgtop {
-        width: auto;
-        margin-top: 15%;
-      }
-  
-      h2 {
-        padding: 15px;
-      }
-  
-      p {
-        padding:0 15px;
-      }
-    
+.container{
+    .header {
+        width: 100%;
+        display: flex;
+        background-color: darkslateblue;
+        padding: 15%;
+    .bannerimg{
+        width:75%;
     }
-  
-    .space-images {
-      display: flex;
-      flex-wrap: wrap;
-      width: 100%;
-      @media @phone{
-        .launch{
-          display: flex;
-          display: none;
+    .intro{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        h2{
+            font-size: 2.5rem;
         }
-        .sky{
-          display: flex;
-          display: none;
+        p{
+            font-size: 1.5rem;
         }
-        .blast{
-          width:90%;
-          display: flex;
-        }
-      }//closes media
-  
-      img {
-        width: 28%;
-        margin: 20px 2.5%;
-        border-radius: 20px;
-        height: 100%;
-      }
-      }//closes space-images
-  
-    .visit-planets {
-      padding: 15px;
-  
-      h3 {
-        margin-top: 11px;
-      }
-  
-      p {
-        margin-top: 13px;
-      }
     }
-  
-    .walk {
-      margin-top: 60px;
-      border-top: 1px solid @main-border-color;
-      padding: 50px 60px;
-      display: flex;
-      justify-content: center;
-  
-      .walk-text {
-        width: 50%;
-     
-        h3 {
-          margin-bottom: 10px;
-        }
-  
-        p {
-          margin-bottom: 26px;
-        }
-  
-        .btn {
-          .custombutton(flex, center);
-        }//closes btn
-  
-        .walk-img {
-        width: 46%;
-        margin-left: 4%;
-        
-        img {
-          width: 100%;
-          height: auto;
-          border-radius: 10px;
-        }//closes img
-        }//closes walk-img
-        }//closes walk-text
-        @media @phone{
-          width: 100%;
-          padding:1%;
-          display: flex;
-          flex-direction: column-reverse;
-          .walk-text{
-            width:100%;
-            margin: 1%;
-          .btn {
-            width: 90%;
-          }
-          .walk-img{
-            width: 100%;
-          }
-         } //closes walk-text
-        }//closes media
-      }//closes walk
-  }// home
+}//closes header
+}//closes container
